ADD HTTPS in Open Redirect

--- a/config/filter.d/php-url-fopen.conf
+++ b/config/filter.d/php-url-fopen.conf
@@ -6,7 +6,7 @@
 
 [Definition]
 
-failregex = ^<HOST> -.*"(GET|POST).*\?.*\=http\:\/\/.* HTTP\/.*$
+failregex = ^<HOST> -.*"(GET|POST|HEAD).*\?.*\=(http|https)\:\/\/.* HTTP\/.*$
 
 ignoreregex = 
 
